--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>localStorage</title>
-    <link rel="stylesheet" href="lesson12_rock_paper_scissors_css.css">
+    <link rel="stylesheet" href="./lesson12_rock_paper_scissors_css.css">
 </head>
 <body>
     <h3>Rock Paper Scissors</h3>
